Fixed spacing between numbers and rem.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -30,6 +30,11 @@ Grey dark 3: #999
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
+
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+    --shadow-light: 0 2rem 5 rem rgba(163, 123, 123, 0.6);
+
+    --line: 1px solid #f4f2f2;
 }
 
 * {
@@ -45,18 +50,18 @@ Grey dark 3: #999
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%; /*1 rem = 10px with this*/
+    font-size: 62.5%; //1 rem = 10px with this
 }
 
 body {
     font-family: 'Open-sans', sans-serif;
     font-weight: 400;
     line-height: 1.6;
-    color: #777;
-    background-image: linear-gradient(to right bottom, #FF3366, #BA265D);
+    color: var(--color-grey-dark-2);
+    background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
 
     min-height: 100vh;
-
 }
+
